# catalyst-grit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTE.md  README.md  catalyst_grit_manifest.json  install_and_push_catalyst_grit_v1_0_1_macos.sh  install_and_push_catalyst_grit_v1_2_0_macos.sh  install_and_push_catalyst_grit_v1_3_0_macos.sh  install_and_push_catalyst_grit_v1_4_0_macos.sh  install_and_push_catalyst_grit_v1_5_0_macos.sh  install_and_push_catalyst_grit_v1_6_0_macos.sh  install_and_push_catalyst_grit_v1_7_0_macos.sh  install_and_push_catalyst_grit_v1_8_0_macos.sh  install_and_push_catalyst_grit_v1_9_0_macos.sh  install_and_push_catalyst_grit_v2_0_0_macos.sh  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
data/: sample_grit_records.csv
docs/: accessibility-portability.md  connected-platform.md  context-mapping.md  evidence-and-handoffs.md  export-spec.md  institutional-api.md  institutional-governance.md  learning-loops.md  local-demo.md  methodology-profile.md  methodology.md  migration-v1.0-to-v1.1.md  migrations-v1.2.md  migrations-v1.4.md  migrations-v1.5.md  migrations-v1.6.md  migrations-v1.7.md  migrations-v1.8.md  migrations-v1.9.md  migrations-v2.0.md  monitoring-trends.md  persistent-workspace.md  publication-and-export.md  recovery-planning.md  recovery-record-contract.md  release-process.md  repository-architecture.md  review-checklist.md  team-recovery.md  version-policy.md  wordpress-demo.md  wordpress-private-workspace.md
examples/: README.md  grit_record_brief.md  grit_record_input.json  grit_record_output.json  grit_record_v1_0_input.json
legacy/: README.md
legacy/flask-tracker/: README.md
methodology/: recovery-profile-v1.2.0.json  recovery-profile-v1.3.0.json  recovery-profile-v1.4.0.json  recovery-profile-v1.5.0.json  recovery-profile-v1.6.0.json  recovery-profile-v1.7.0.json  recovery-profile-v1.8.0.json  recovery-profile-v1.9.0.json  recovery-profile-v2.0.0.json
notebooks/: CatalystGritDemo.ipynb
project/: __init__.py
python/: catalyst_grit_core.py
release/: v1.0.1.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.8.0.md  v1.9.0.md  v2.0.0.md
sample_data/: sample_blocks.csv
schemas/: catalyst_grit_api_response.schema.json  catalyst_grit_connected_platform.schema.json  catalyst_grit_methodology_profile.schema.json  catalyst_grit_project.schema.json  catalyst_grit_publication.schema.json  catalyst_grit_record.schema.json  catalyst_grit_request.schema.json  catalyst_grit_workspace_bundle.schema.json
scripts/: build_release.py  check_js_parity.js  release_contract.py  smoke_test.py
src/catalyst_grit/: __init__.py  api.py  cli.py  core.py  db.py  platform.py  publication.py  (+2 more)
src/catalyst_grit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html  metrics.html
tests/: test_catalyst_grit_core.py  test_catalyst_grit_mapping.py  test_connected_platform.py  test_evidence_handoffs.py  test_examples_and_schema.py  test_learning_loops.py  test_migrations.py  test_monitoring_trends.py  test_openapi_v19.py  test_publication_api_governance.py  test_recovery_planning.py  test_repository_integrity.py  test_storage.py  test_team_recovery.py  test_version_contract.py  test_wordpress_workspace.py  test_workspace_cli.py
(+33 files in other folders)
