[project]
name = "catalyst-grit"
version = "2.0.0"
description = "Connected human-systems recovery, learning, monitoring, evidence, decision handoffs, publication, and portable institutional workflows"
authors = [{name = "Tariq Ahmad", email = "tariq@thecontentcatalyst.net"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["recovery", "resilience", "human-systems", "reflection", "planning"]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "jsonschema>=4,<5",
  "pytest>=8,<9",
  "PyYAML>=6,<7",
]

[project.urls]
Homepage = "https://github.com/Content-Catalyst-LLC/catalyst-grit"
Repository = "https://github.com/Content-Catalyst-LLC/catalyst-grit"

[project.scripts]
grit = "catalyst_grit.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["catalyst_grit", "catalyst_grit.migrations"]

[tool.setuptools.package-data]
"catalyst_grit.migrations" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
